--- a/kullanici-katilimi/src/App.css
+++ b/kullanici-katilimi/src/App.css
@@ -58,8 +58,24 @@ button[type="submit"] {
   cursor: pointer;
 }
 
+button[type="button"] {
+  background-color: #17974c;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 button[type="submit"]:hover {
   background-color: #0055cc;
+}
+
+.butonlar {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
